# DE-team2-vroomcast

./: README.md
.github/workflows/: README.md  bobaedream-extract-deploy.yml  bobaedream-extract-test.yml  clien-extract-deploy.yml  clien-extract-test.yml  clien-extract-text.yml  dcinside-extract-deploy.yml  dcinside-extract-test.yml  extract-test.yml  transform-sentiment-deploy.yml  transform-sentiment-test.yml  transform-spark-file-upload.yml
combine/: README.md  main.py  test.py
combiner/: local.py  main.py  pyproject.toml  test.py
combiner/extracted/: test1.json  test2.json  test3.json
extract/: README.md
extract/bobaedream/: .gitignore  Dockerfile  README.md  main.py  post_extractor.py  post_info_list_extractor.py  pyproject.toml  test.py
extract/clien/: README.md  extract_old_data.py  main.py  parse_html.py
extract/dcinside/: .gitignore  Dockerfile  README.md  chrome-install.sh  chrome-installer.sh  dcinside_readme.md  (+10 more)
extractor/: README.md
load/: README.md  copy_s3_to_redshift.md
mwaa/: .env.example  Dockerfile  README.md  docker-compose.yml  output.json  pyproject.toml
mwaa/bucket/configs/: car.json  community.json
mwaa/bucket/dags/: example.py  extract_only.py  slack_sample.py  workflow.py
mwaa/bucket/dags/configs/: car.json  community.json
mwaa/bucket/dags/modules/: aggregator.py  analyzer.py  combiner.py  config.py  constants.py  extractor.py  loader.py  monitor.py  notificator.py  operators.py  synchronizer.py  temp_transformer.py  transformer.py
mwaa/bucket/dags/test/: test_copy_s3_to_redshift.py  test_emr.py  test_extract.py  test_extractor.py  test_notificator.py  test_read_config.py  test_s3_to_redshift.py  test_synchronizer.py
mwaa/bucket/dags/utils/: time.py  xcom.py
notification/: README.md  main.py
transform/: README.md
visualize/: README.md  new_car_all.csv  new_car_for_tableau.csv  sample_parquet.parquet  sqlite_db.db  superset_database_test.ipynb  table_sample_csv.csv  word_split_konlpy.ipynb
(+25 files in other folders)
