[tool.poetry]
name = "combiner"
version = "0.1.0"
description = ""
authors = ["vroomcast"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyarrow = "^19.0.0"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
boto3 = "^1.36.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
