[tool.poetry]
name = "bobaedream"
version = "0.1.0"
description = ""
authors = ["reudekx <reudekx@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
boto3 = "^1.36.18"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
